# rust-grpc-stock-service

./: Cargo.toml  build.rs
proto/: stock_service.proto
src/: client.rs  server.rs
