[package]
name = "stock-rpc-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "stock-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "stock-client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
aws-config = "0.0.25-alpha"
aws-sdk-dynamodb = "0.0.25-alpha"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.6"

